; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_sd.c_scsi_disk_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_sd.c_scsi_disk_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.scsi_disk = type { %struct.TYPE_2__*, i32, %struct.gendisk* }
%struct.TYPE_2__ = type { i32 }
%struct.gendisk = type { i32* }

@sd_index_lock = common dso_local global i32 0, align 4
@sd_index_ida = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.device*)* @scsi_disk_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scsi_disk_release(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.scsi_disk*, align 8
  %4 = alloca %struct.gendisk*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = call %struct.scsi_disk* @to_scsi_disk(%struct.device* %5)
  store %struct.scsi_disk* %6, %struct.scsi_disk** %3, align 8
  %7 = load %struct.scsi_disk*, %struct.scsi_disk** %3, align 8
  %8 = getelementptr inbounds %struct.scsi_disk, %struct.scsi_disk* %7, i32 0, i32 2
  %9 = load %struct.gendisk*, %struct.gendisk** %8, align 8
  store %struct.gendisk* %9, %struct.gendisk** %4, align 8
  %10 = call i32 @spin_lock(i32* @sd_index_lock)
  %11 = load %struct.scsi_disk*, %struct.scsi_disk** %3, align 8
  %12 = getelementptr inbounds %struct.scsi_disk, %struct.scsi_disk* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @ida_remove(i32* @sd_index_ida, i32 %13)
  %15 = call i32 @spin_unlock(i32* @sd_index_lock)
  %16 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %17 = getelementptr inbounds %struct.gendisk, %struct.gendisk* %16, i32 0, i32 0
  store i32* null, i32** %17, align 8
  %18 = load %struct.gendisk*, %struct.gendisk** %4, align 8
  %19 = call i32 @put_disk(%struct.gendisk* %18)
  %20 = load %struct.scsi_disk*, %struct.scsi_disk** %3, align 8
  %21 = getelementptr inbounds %struct.scsi_disk, %struct.scsi_disk* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = call i32 @put_device(i32* %23)
  %25 = load %struct.scsi_disk*, %struct.scsi_disk** %3, align 8
  %26 = call i32 @kfree(%struct.scsi_disk* %25)
  ret void
}

declare dso_local %struct.scsi_disk* @to_scsi_disk(%struct.device*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @ida_remove(i32*, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1

declare dso_local i32 @put_disk(%struct.gendisk*) #1

declare dso_local i32 @put_device(i32*) #1

declare dso_local i32 @kfree(%struct.scsi_disk*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
